<resources>
    <string name="app_name">Hyper Food</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="register">ลงทะเบียน</string>
    <string name="username">ชื่อผู้ใช้</string>
    <string name="email">อีเมล</string>
    <string name="password">รหัสผ่าน</string>
    <string name="fname">ชื่อ</string>
    <string name="lname">นามสกุล</string>
    <string name="disease">โรคประจำตัว</string>
    <string name="age">อายุ</string>
    <string name="gender">เพศ</string>
    <string name="validate_register">กรุณากรอกข้อมูลให้ครบถ้วน</string>
    <string name="register_success">ลงทะเบียนสำเร็จ</string>
    <string name="register_fail">เกิดข้อผิดพลาดกรุณาลองใหม่อีกครั้ง</string>
    <string name="login_fail">อีเมล หรือรหัสผ่านไม่ถูกต้อง</string>
    <string name="select_disease">เลือกโรคประจำตัว</string>
    <string name="select_gender">เลือกเพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="loading">Loading</string>
    <string name="loading_register">กำลังลงทะเบียน</string>
    <string name="loading_login">กำลังเข้าสู่ระบบ</string>
    <string name="setting">ตั้งค่า</string>
    <string name="back_again">กดปุ่ม Back อีกครั้งเพื่อออกจากแอพพลิเคชั่น</string>
    <string name="recommend_food">อาหารแนะนำสำหรับคุณ</string>
    <string name="all_food">รายการอาหารทั้งหมด</string>
    <string name="diabetes">เบาหวาน</string>
    <string name="obesity">อ้วน</string>
    <string name="hypertension">ความดัน</string>
    <string name="soduim">โซเดียม</string>
    <string name="carbohydrate">คาร์โบไฮเดรต</string>
    <string name="kcal">kcal</string>
    <string name="quantity">ปริมาณ</string>
    <string name="mili_gram">มิลลิกรัม</string>
    <string name="fast_food">fastFood</string>
    <string name="fruit">fruit</string>
    <string name="side_dish">sideDish</string>
    <string name="sweets">sweets</string>
    <string name="fat">ไขมัน</string>
    <string name="kilo_cal">กิโลแคลอรี</string>
    <string name="desc_food">น้ำหนักสุทธิที่บริโภค</string>
    <string name="desc_nutrition">ข้อมูลโภชนาการ (Nutrition Information)</string>
    <string name="sugar">น้ำตาล</string>
    <string name="protein">โปรตีน</string>
    <string name="morning">เช้า</string>
    <string name="noon">เที่ยง</string>
    <string name="evening">เย็น</string>
    <string name="night">ดึก</string>
    <string name="grams">กรัม</string>
    <string name="mili_grams">มิลลิกรัม</string>
    <string name="save_food">บันทึกรายการ</string>
    <string name="cancel_food">ยกเลิกรายการ</string>
    <string name="save_success">บันทึกรายการสำเร็จ</string>
    <string name="save_fail">บันทึกรายการไม่สำเร็จ กรุราลองอีกครั้ง</string>
    <string name="txt_morning">morning</string>
    <string name="txt_noon">noon</string>
    <string name="txt_evening">evening</string>
    <string name="txt_night">night</string>
    <string name="danger">อันตราย!!!!!</string>
    <string name="danger_carbohydrate">คุณได้รับปริมาณคาร์โบไฮเดรตเกินที่ควรได้รับต่อวันแล้ว\nเสี่ยงต่อการเป็นโรคเบาหวานและอาจเสี่ยงต่อการเพิ่มความ\nรุนแรงของโรคที่คุณเป็นอยู่</string>
    <string name="danger_sodium">คุณได้รับปริมาณโซเดียมเกินที่ควรได้รับต่อวันแล้ว\nเสี่ยงต่อการเป็นโรคความดันโลหิตสูงและอาจเสี่ยงต่อการ\nเพิ่มความรุนแรงของโรคที่คุณเป็นอยู่</string>
    <string name="danger_kcal">คุณได้รับปริมาณแคลลอรี่เกินที่ควรได้รับต่อวันแล้ว\nเสี่ยงต่อการเป็นโรคอ้วนและอาจเสี่ยงต่อการเพิ่มความ\nรุนแรงของโรคที่คุณเป็นอยู่</string>
    <string name="how_to">วิธีการรับมือ</string>
    <string name="no">ไม่สนฉันจะกินต่อ</string>
    <string name="how_to_carbohydrate_title">วิธีการรับมือสำหรับโรคเบาหวาน</string>
    <string name="how_to_sodium_title">วิธีการรับมือสำหรับโรคความดันโลหิตสูง</string>
    <string name="how_to_kcal_title">วิธีการรับมือสำหรับโรคอ้วน</string>
    <string name="how_to_carbohydrate_h1">รู้จักกิน ควบคุมโรคเบาหวานได้</string>
    <string name="how_to_sodium_h1">รู้จักกิน ควบคุมโรคความดันโลหิตสูงได้</string>
    <string name="how_to_kcal_h1">รู้จักกิน ควบคุมโรคอ้วนได้</string>
    <string name="how_to_carbohydrate_p1">หัวใจสำคัญของการควบคุมเบาหวาน คือ การกินอาหารให้พอดีกับความต้องการของร่างกาย การกินมากเกินไปจะทำให้น้ำตาลในเลือดขึ้นสูงหรือเร็วเกินไป ในขณะเดียวกันหากกินน้อยเกินไปอาจทำให้ระดับน้ำตาลในเลือดต่ำเกินไปจนเป็นอันตรายได้</string>
    <string name="how_to_sodium_p1">นอกจากการจำกัดเกลือแล้ว ในการประกอบอาหารทุกชนิด ผู้ป่วยจะต้องหลีกเลี่ยงอาหารดังต่อไปนี้</string>
    <string name="how_to_kcal_p1">ภาวะที่ร่างกายมีไขมันสะสมไว้มาก จนเกิดผลเสียต่อสุขภาพ คนที่เป็นโรคอ้วน มีโอกาสเสี่ยงต่อการเกิดโรคเรื้อรังต่างๆ มากกว่าคนที่มีน้ำหนักตัวปกติ เช่น โรคเบาหวาน โรคความดันโลหิตสูง โรคหลอดเลือดหัวใจ เป็นต้น</string>
    <string name="how_to_carbohydrate_h2">อาหารที่ควรหลีกเลี่ยงหรือควรงด ได้แก่</string>
    <string name="how_to_sodium_h2">อาหารที่ควรหลีกเลี่ยงหรือควรงดได้แก่</string>
    <string name="how_to_kcal_h2">ข้อแนะนำในการควบคุมโรคอ้วนอย่างง่าย</string>
    <string name="how_to_carbohydrate_p2">- ขนมหวานทุกประเภท เช่น ทองหยิบ ทองหยอด ขนมชั้น หม้อแกง ของเชื่อมต่างๆ เค้กต่างๆ ฯลฯ\n- ผลไม้รสหวานจัด เช่น เงาะ องุ่น ทุเรียน ขนุน ละมุด น้อยหน่า อ้อย ฯลฯ\n- น้ำตาลทุกประเภท เช่น น้ำตาลทราย น้ำตาลปี๊บ น้ำตาลก้อน น้ำผึ้ง ฯลฯ\n- เครื่องดื่มที่มีรสหวาน เช่น น้ำอัดลม น้ำหวาน น้ำผลไม้กระป๋อง น้ำผลไม้คั้นสด ฯลฯ\n- เครื่องอื่มแอลกอฮอล์ทุกชนิด เครื่องดื่มแอลกอฮอล์ 1 กรัม ให้พลังงานสูงถึง 7 กิโลแคลลอรี่ พลังงานเหล่านี้ จะไปสะสมในร่างกาย และร้อยละ 95 ของเครื่องดื่มแอลกอฮอล์จะซึมเข้ากระแสเลือด โดยผ่านทางเยื่อบุกระเพาะอาหารและลำไส้เล็กอย่างรวดเร็ว ฤทธิ์ของแอลกอฮอล์จะไปขยายหลอดเลือดทำให้ความดันโลหิตสูงมากขึ้น เส้นเลือดจึงแตกง่ายเพิ่มโอกาสเสี่ยงหลอดเลือดในสมองแตก ทำให้เกิดโรคหลอดเลือดสมอง\n- ผลไม้กระป๋อง ผลไม้แช่อิ่ม ผลไม้ดอง อาหารในกลุ่มนี้เป็นผลิตภัณฑ์ที่ไม่มีส่วนผสมของน้ำตาล แต่มีส่วนผสมของเกลือสูง\n- ผลิตภัณฑ์เนื้อสัตว์แปรรูป อาทิ ไส้กรอก แฮม เบคอน แหนม กุนเชียง ฯลฯ ผลิตภัณฑ์เหล่านี้มีปริมาณเกลือ ไขมัน และสารเคมีต่างๆ\n</string>
    <string name="how_to_sodium_p2">- ของแห้ง ของเค็ม และรมควัน เช่น ปลาเค็ม เนื้อเค็ม กุ้งแห้ง หมูแฮม เบคอน ไส้กรอก ซุปก้อน หรือซุปซองอาหารซองสำเร็จรูป อาหารหมักดองทุกชนิด ฯลฯ เพราะเกลือทำให้ความตึงตัวของผนังหลอดโลหิตแดงเพิ่มขึ้น ทำให้ความดันเลือดสูงขึ้น\n- อาหารที่ผสมเกลือ เช่น ถั่วอบเนย ถั่วทอด ข้าวโพดคั่ว ฯลฯ\n- เนยหรือมาการีนที่ผสมเกลือ ควรหลีกเลี่ยงไขมันจากสัตว์ และกะทิ รวมถึงการประกอบอาหารที่ใช้น้ำมันมากๆ\n- เครื่องดื่มเกลือแร่ ที่มีโซเดียมผสมอยู่ด้วย\n- อาหารหวานจัด เช่น ขนมหวานทุกชนิด พยายามหลีกเลี่ยงให้มากที่สุด เพราะจะทำให้น้ำหนักตัว และระดับไขมันในเลือดเพิ่มขึ้น\n- เครื่องดื่มต่างๆ เช่น ชา กาแฟ ซึ่งมี สารคาเฟอีนสูง  กระตุ้นให้หัวใจทำงานหนักขึ้น สูบฉีดโลหิตแรงขึ้น เป็นอันตรายสำหรับผู้มีความดันโลหิตสูง\n- หลีกเลี่ยงเครื่องดื่มแอลกอฮอล์ เช่น เหล้าเบียร์ จะทำให้หลอดเลือดขยายตัว การไหลเวียนของโลหิตเร็วและแรงขึ้นหัวใจต้องทำงานหนัก และแรงดันโลหิตจะสูงขึ้น เป็นอันตรายอย่างยิ่ง ควรงดเด็ดขาด และงดบุหรี่\n</string>
    <string name="how_to_kcal_p2">- ลดน้ำหนักทีละน้อยไม่ควรเกิน ½ กิโลกรัม/สัปดาห์\n- กินอาหารให้ครบทุกมื้อ หลากหลาย แต่ลดปริมาณอาหารในแต่ละมื้อให้น้อยลง\n- ลดอาหารขบเคี้ยว ขนมหวาน น้ำหวาน น้ำอัดลม อาหารขยะ\n- ลดอาหารทอดน้ำลอย เช่น ปาท่องโก๋ กล้วยแขก กระหรี่พัฟ ขนมไข่นกกระทาทอด โรตี ฯลฯ\n- เลือกใช้เนื้อสัตว์ไขมันต่ำมาปรุงอาหาร เช่น เนื้อปลา ไข่ขาว เต้าหู้ ถ้าเป็นเนื้อหมู/เนื้อไก่ ต้องเอาหนังและมันออก\n- เลือกรับประทานผลไม้ที่มีรสหวานไม่จัด และกินผลไม้ทั้งผลแทนการกินน้ำผลไม้คั้น\n- รับประทานผักใบเขียว และผักหลายชนิด\n- หลีกเลี่ยงการรับประทานแป้งแปรรูปบ่อยเกินไป เช่น บะหมี่ ก๋วยเตี๋ยว\n- กินอาหารพออิ่ม ไม่ต้องเสียดาย อาหารที่เหลือเก็บไว้มื้อหน้าได้\n- ควรบันทึกอาหารทุกอย่างที่รับประทาน เพื่อทบทวนว่าในแต่ละวันรับประทานอาหารไปมากน้อยเพียงใด\n- งดเครื่องดื่มแอลกอฮอล์ซึ่งกระตุ้นความอยากอาหาร แอลกอฮอล์ให้พลังงานที่ว่างเปล่าไร้สารอาหารที่มีประโยชน์\n- งดการกินจุกจิกจากความเคยชิน ซึ่งไม่ใช่ความหิวที่แท้จริง อาจเลือกเครื่องดื่มที่ไม่มีพลังงาน เช่น น้ำเปล่า น้ำตะไคร้ น้ำใบเตย น้ำชา จะลดความรู้สึกหิวได้\n</string>
    <string name="how_to_carbohydrate_h3">อาหารที่รับประทานได้โดยไม่จำกัดจำนวน ได้แก่</string>
    <string name="how_to_sodium_h3"></string>
    <string name="how_to_kcal_h3"></string>
    <string name="how_to_carbohydrate_p3">- ผักประเภทใบต่างๆ จะมีปริมาณแป้งและน้ำตาลน้อย เช่น คะน้า ตำลึง บวบ ฟักเขียว ผักบุ้ง กะหล่ำปรี กวางตุ้ง แตงกวา ผักกาดหอม ผักโขม มะเขือเทศต่างๆ เป็นต้น ปัจจุบันอาหารมักเน้นให้มีการกินปริมาณใยอาหารมากขึ้น จากผลการวิจัยแสดงให้เห็นว่าจะทำให้ระดับน้ำตาลในเลือดและคอเลสเตอรอลลดลงได้\n\n-เครื่องปรุงรส เช่น พริกไทย เครื่องเทศ น้ำส้ม น้ำซุปใส วุ้นไม่ใส่น้ำตาล ชา กาแฟไม่ใส่น้ำตาลและนมข้นหวาน ข่า ตะไคร้ พริก กระเทียม ฯลฯ การใช้สมุนไพรเพื่อเป็นตัวช่วยในการปรุงอาหาร ให้มีรสชาติ กลิ่นที่ชวนรับประทาน
</string>
    <string name="how_to_sodium_p3"></string>
    <string name="how_to_kcal_p3"></string>
</resources>
