<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_alert">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/danger"
                android:textColor="#D31212"
                android:fontFamily="@font/lamoon_bold"
                android:textSize="35sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/lamoon_regular"
                android:textColor="@color/colorWhite"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:layout_weight="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnDismiss"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/no"
                        android:background="@drawable/btn_cancel"
                        android:textColor="@color/colorWhite"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/lamoon_bold"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnHowTo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@drawable/btn_save"
                        android:textColor="@color/colorWhite"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/lamoon_bold"
                        android:text="@string/how_to"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>