<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.MainActivity"
            android:background="@color/bg_transparent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:elevation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ข้อมูลผู้ใช้"
                        android:layout_centerInParent="true"
                        android:textSize="25sp"
                        android:fontFamily="@font/lamoon_bold"
                        android:textColor="@color/colorWhite"/>


                    <ImageButton
                        android:id="@+id/btnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_back"
                        android:background="@null"
                        android:layout_centerVertical="true"
                        android:tint="@color/colorWhite"/>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/colorGray"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/animation_view"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        android:src="@drawable/ic_person_black_24dp"
                        android:layout_marginTop="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputEmail"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:focusable="false"
                            android:background="@color/transparent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fname"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:focusable="false"
                            android:background="@color/transparent"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lname"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:focusable="false"
                            android:background="@color/transparent"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputDisease"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/disease"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:focusable="false"
                            android:background="@color/transparent"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/gender"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:focusable="false"
                            android:background="@color/transparent"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/age"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:focusable="false"
                            android:background="@color/transparent"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </ScrollView>


        </LinearLayout>

    </RelativeLayout>

</layout>