<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:background="#00FFFFFF"/>

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_round_white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/animation_view"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_person_black_24dp"
                        android:layout_marginTop="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputEmail"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:background="@color/transparent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        app:passwordToggleDrawable="@drawable/toggle_pass"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorGray"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:maxLength="10"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/transparent"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fname"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/transparent"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lname"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/transparent"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <Spinner
                            android:id="@+id/inputDisease"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/transparent" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_arrow_drop_down"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:scaleType="fitXY"
                            android:layout_marginRight="10dp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <Spinner
                            android:id="@+id/inputGender"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/transparent" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_arrow_drop_down"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:scaleType="fitXY"
                            android:layout_marginRight="10dp"/>

                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/edt_bg_white">

                        <EditText
                            android:id="@+id/inputAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/age"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/transparent"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnRegister"
                        android:text="@string/register"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_bg_white"
                        android:layout_marginBottom="30dp"/>

                </LinearLayout>

            </ScrollView>


        </LinearLayout>


    </RelativeLayout>
</layout>